[gd_scene load_steps=10 format=3 uid="uid://bcyuqcdsqdbd4"]

[ext_resource type="Script" path="res://scripts/items/chest.gd" id="1_5n2rk"]
[ext_resource type="Texture2D" uid="uid://bj3be0jpojf8h" path="res://art/items/Treasure/BigTreasureChest.png" id="1_5qiav"]
[ext_resource type="AudioStream" uid="uid://ci1rvkupl521k" path="res://sfx/chest_noise.wav" id="3_uahfq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fg5j1"]
size = Vector2(14, 18)

[sub_resource type="Animation" id="Animation_h4mli"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q1bpn"]
resource_name = "close"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_rtu1j"]
resource_name = "open"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmybi"]
_data = {
"RESET": SubResource("Animation_h4mli"),
"close": SubResource("Animation_q1bpn"),
"open": SubResource("Animation_rtu1j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5ggv"]
size = Vector2(14, 9)

[node name="Chest" type="Area2D"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -2)
script = ExtResource("1_5n2rk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_fg5j1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5qiav")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_dmybi")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_u5ggv")

[node name="chest_noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_uahfq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
